--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,11 @@
 // GHIDRA_INSTALL_DIR environment variable or Gradle project property:
 //
 //     > export GHIDRA_INSTALL_DIR=<Absolute path to Ghidra> 
-//     > gradle
+//     > gradle build
 //
 //         or
 //
-//     > gradle -PGHIDRA_INSTALL_DIR=<Absolute path to Ghidra>
+//     > gradle -PGHIDRA_INSTALL_DIR=<Absolute path to Ghidra> build
 //
 // Gradle should be invoked from the directory of the project to build.  Please see the
 // application.gradle.version property in <GHIDRA_INSTALL_DIR>/Ghidra/application.properties
